The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

### Changed

### Deprecated

### Removed

### Fixed

### Security

## [22.09] 2022-09-14

### Fixed

* restore deleted MINIFW_FILE variable

## [22.08.1] 2022-08-29

### Changed

* IS_AUTOIF: check only statically defined interfaces

## [22.08] 2022-08-29

### Added

* IS_AUTOIF: add support for /etc/network/interfaces.d

### Removed

* remove all BSD specific code

## [22.07.1] 2022-07-28

### Changed

* IS_SSHPERMITROOTNO: do not display sshd errors

## [22.07] 2022-07-28

### Added

* IS_FAIL2BAN_PURGE: workaround to purge fail2ban database on stretch and buster

### Changed

* IS_NETWORKING_SERVICE: not in cron mode 

### Fixed:

* IS_BACKUPUPTODATE: correct order for find(1) arguments

## [22.06.2] 2022-06-09

### Changed

* IS_BACKUPUPTODATE: add --max-depth=1 to limit the number of evaluated files

## [22.06.1] 2022-06-06

### Changed

* IS_BACKUPUPTODATE: look for all files (with find) instead of simple "file globbing" on first level.
* IS_DEBIANSECURITY: support source list options
* IS_SSHPERMITROOTNO: analyze real configuration, instead of parsing the file


## [22.06] 2022-06-03

### Added

* IS_AUTOIF: Ignore WireGuard interfaces
* IS_NETWORKING_SERVICE: check if networking service is enabled

### Changed

* IS_DEBIANSECURITY: Fix Debian security repo for Bullseye, cf https://www.debian.org/releases/stable/errata

## [22.05] 2022-05-12

### Changed

* IS_EVOBACKUP_EXCLUDE_MOUNT: exclude scripts without Rsync command

## [22.04.1] 2022-04-25

### Changed

* fix various shellcheck violations

### Fixed

* IS_EVOBACKUP_EXCLUDE_MOUNT: fix one-file-system restriction

## [22.04] 2022-04-25

### Changed

* IS_EVOBACKUP_EXCLUDE_MOUNT : skip if --one-file-system is used

### Fixed
