@@ -5,6 +5,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Added
 
+* IS_PHPMYADMINAPACHECONF: check that package configuration has not been pulled in
+
 ### Changed
 
 ### Deprecated
